shifted footer and prevents extra scroll bars

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 
 .wrapper {
-    height: auto;
+    min-height: 100vh;
     width: 100vw;
 
     /* background-color: #8d7ebb;
@@ -24,8 +24,6 @@
     font-family: Raleway;
     user-select: none;
     margin: 0 auto;
-    /* background-color: #f3e6ff;
-    background-blend-mode: lighten */
 }
 
 .container::before {
@@ -169,7 +167,6 @@
     max-height: 0;
     scale: 0;
     transition: max-height 0.5s;
-    overflow: hidden;
 }
 
 .working-content {
@@ -244,7 +241,7 @@ a i {
     body {
         position: absolute;
         min-height: 100vh;
-        overflow-y: hidden;
+
         /* background-color: ; */
     }
 
@@ -268,7 +265,7 @@ a i {
     }
 
     .welcome-text {
-        width: 70%;
+        width: 80%;
         padding: 1.4rem 1.7rem;
         font-size: 0.9rem;
         line-height: 1.5rem;
@@ -296,11 +293,9 @@ a i {
 
     .bg {
         width: 100%;
+        overflow: hidden;
     }
 
-    .abt-content{
-        margin-bottom: 20px;
-    }
 
     .phone-width {
         width: 90%;
@@ -313,7 +308,7 @@ a i {
         align-items: center;
         justify-content: space-between;
         transform: translateX(20%);
-        font-size: 1rem;
+        font-size: 1.2rem;
         font-weight: 400;
         /* position: absolute;
         bottom: 0; */
@@ -326,18 +321,10 @@ a i {
 
     .footer {
         padding: 10px;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        margin-bottom: 60px;
-    }
-    .footer-active{
-        margin-bottom: 0;
         position: relative;
-        padding: 10px;
+        margin-top: 40px;
     }
 
-    
 }
 
 @media (max-height: 830px) {
